<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="50dp"
    android:paddingVertical="30dp">

    <!-- Back Button (Left) -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_back"
        android:scaleType="fitCenter"
        android:src="@drawable/backbutton" />

    <!-- Right Buttons Container -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <!-- Home Button -->
        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cd_home"
            android:scaleType="fitCenter"
            android:src="@drawable/homebutton" />

        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent" />

        <!-- Help Button -->
        <ImageButton
            android:id="@+id/btnHelp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cd_alert"
            android:scaleType="fitCenter"
            android:src="@drawable/helpbutton" />
    </LinearLayout>

</RelativeLayout>

